--- a/.gitignore
+++ b/.gitignore
@@ -99,9 +99,17 @@ ENV/
 
 # mypy
 .mypy_cache/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
 # Text backup files
 *.bak
 
 #Database
 *.sqlite3
+
+
+.DS_Store
+.vscode/
